tests/errors/string-invalid-hex-escape.ari
fn main() -> i64 {
  println("\x");
  return 0;
}
